--- a/base.html
+++ b/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="./css/base.css">
+
     <!-- fuente kanit -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +27,7 @@
         </div>
     </header>
     <main>
-
+        <div>CANICROSS</div>
     </main>
     <footer>
         <img class="img-logo" src="./imagenes/logo.jpg" alt="">
