trabajo casi terminado

--- a/dona.html
+++ b/dona.html
@@ -19,17 +19,18 @@
         </div>
         <div class="contenedor-nav">
             <ul>
-                <li><a href="">NOSOTROS</a></li>
-                <li><a href="">ADOPTA</a></li>
-                <li><a href="">DONACIONES</a></li>
-                <li><a href="">PARTICIPA</a></li>
-                <li><button>DONA AHORA</button></li>
+                <li><a href="/home.html">INICIO</a></li>
+                <li ><a href="/nosotros.html" >NOSOTROS</a></li>
+                <li><a href="/conocelos.html" >ADOPTA</a></li>
+                <li><a href="/dona.html" class="focus">DONACIONES</a></li>
+                <li><a href="/participa.html">PARTICIPA</a></li>
+                <li><a id="botonDonar" class="boton-dona" href="/dona.html">DONA AHORA</a></li>
             </ul>
         </div>
     </header>
     <main>
         <img src="/imagenes/portada-dona.jpg" alt="" class="portada">
-        <div class="titulo-dona">DONA</div>
+        <div class="titulo-dona">DONACIONES</div>
         <div>
             <p class="intro">
                 Los aportes económicos son importantes para pagar 
@@ -65,7 +66,7 @@
             
         </div>
         <div class="insumos">
-            <div class="titulo-insumos">DONACIOONES DE INSUMOS</div>
+            <div class="titulo-insumos">DONACIONES DE INSUMOS</div>
             <div class="modo-pago donacion-insumos">
                 <p>Si estas pensando en donar y no sabes qué, 
                     a continuación te contamos cuales son las necesidades prioritarias que tiene el centro
