--- a/quieroAdoptar.html
+++ b/quieroAdoptar.html
@@ -22,20 +22,22 @@
         </div>
         <div class="contenedor-nav">
             <ul>
-                <li><a href="">NOSOTROS</a></li>
-                <li><a href="">ADOPTA</a></li>
-                <li><a href="">DONACIONES</a></li>
-                <li><a href="">PARTICIPA</a></li>
-                <li><button>DONA AHORA</button></li>
+                <li><a href="/home.html">INICIO</a></li>
+                <li ><a href="/nosotros.html" >NOSOTROS</a></li>
+                <li><a href="/conocelos.html" class="focus">ADOPTA</a></li>
+                <li><a href="/dona.html">DONACIONES</a></li>
+                <li><a href="/participa.html">PARTICIPA</a></li>
+                <li><a id="botonDonar" class="boton-dona" href="/dona.html">DONA AHORA</a></li>
             </ul>
         </div>
     </header>
     <main>
+        <div class="baner">
+            <h1>ADOPTA</h1>
+            <img src="./imagenes/quieroAdoptar.jpeg" alt="quieroAdoptar">
+        </div>
         <div class="contenedor">
-            <div class="baner">
-                <h1>ADOPTA</h1>
-                <img src="./imagenes/quieroAdoptar.jpeg" alt="quieroAdoptar">
-            </div>
+            
 
             <div>
                 <h2>ANTES DE ADOPTAR</h2>
@@ -65,6 +67,7 @@
 
                     </div>
                     <div class="card">
+                        
                         <img src="./imagenes/joven.png" alt="joven" class="foto-card">
                         <div class="card-titulo">JOVEN</div>
                         <div class="edad">1-5 años</div>
@@ -121,7 +124,7 @@
 
                         </div>
 
-                        <button>CONOCELOS</button>
+                        <a class="button" href="/conocelos.html">CONOCELOS</a>
                     </div>
                     <div>
                         <img src="./imagenes/perro-requisitos.png" alt="" class="img-req">
