casi terminado, falta responsive

--- a/home.html
+++ b/home.html
@@ -18,12 +18,13 @@
         </div>
         <div class="contenedor-nav">
             <ul>
-                <li><a href="/home.html">INICIO</a></li>
-                <li ><a href="/nosotros.html" class="focus">NOSOTROS</a></li>
+                <li><a href="/home.html" class="focus">INICIO</a></li>
+                <li ><a href="/nosotros.html" >NOSOTROS</a></li>
+                <li><a href="/quieroAdoptar.html" >QUIERO ADOPTAR</a></li>
                 <li><a href="/conocelos.html">ADOPTA</a></li>
                 <li><a href="/dona.html">DONACIONES</a></li>
                 <li><a href="/participa.html">PARTICIPA</a></li>
-                <li><a id="botonDonar" class="boton-dona" href="/dona.html">DONA AHORA</a></li>
+                <li><a id="botonDonar" class="boton-dona" href="/dona.html#tipo">DONA AHORA</a></li>
             </ul>
         </div>
     </header>
@@ -42,7 +43,7 @@
                 <div class="overlay"></div>
                     <div class="content">
                     <h1>CANICROSS</h1>
-                    <a class="boton-dona">VER MAS</a>
+                    <a class="boton-dona" href="#folleto">VER MAS</a>
                 </div>
             </div>
             
@@ -57,14 +58,14 @@
                 <div class="overlay"></div>
                 <div class="content">
                   <h1>TU AYUDA ES IMPORTANTE</h1>
-                  <a class="boton-dona">DONA AHORA</a>
+                  <a class="boton-dona" href="/dona.html">DONA AHORA</a>
                 </div>
               </div>
             </div>
             <button class="nav-btn prev-btn">❮</button>
             <button class="nav-btn next-btn">❯</button>
         </div>
-        <div class="div-canicross">
+        <div class="div-canicross" id="folleto">
             <img src="./imagenes/bolanteCanicross.png" alt="Canicross" class="img-canicross">
             <div class="div-text">
                 <h2>DE QUE SE TRATA</h2>
