--- a/conocelos.html
+++ b/conocelos.html
@@ -37,10 +37,11 @@
             <ul>
                 <li><a href="/home.html">INICIO</a></li>
                 <li ><a href="/nosotros.html" >NOSOTROS</a></li>
+                <li><a href="/quieroAdoptar.html" >QUIERO ADOPTAR</a></li>
                 <li><a href="/conocelos.html" class="focus">ADOPTA</a></li>
                 <li><a href="/dona.html">DONACIONES</a></li>
                 <li><a href="/participa.html">PARTICIPA</a></li>
-                <li><a id="botonDonar" class="boton-dona" href="/dona.html">DONA AHORA</a></li>
+                <li><a id="botonDonar" class="boton-dona" href="/dona.html#tipo">DONA AHORA</a></li>
             </ul>
         </div>
     </header>
