trabajo casi terminado

--- a/quieroAdoptar.html
+++ b/quieroAdoptar.html
@@ -32,11 +32,12 @@
             </ul>
         </div>
     </header>
+    <div class="baner">
+        <h1>QUIERO ADOPTAR</h1>
+        <img src="./imagenes/quieroAdoptar.jpeg" alt="quieroAdoptar">
+    </div>
     <main>
-        <div class="baner">
-            <h1>QUIERO ADOPTAR</h1>
-            <img src="./imagenes/quieroAdoptar.jpeg" alt="quieroAdoptar">
-        </div>
+        
         <div class="contenedor">
             
 
@@ -49,7 +50,7 @@
                     los costos
                     asociados con la alimentación, atención veterinaria y cuidado durante las vacaciones. Asegúrate de
                     que tu
-                    elección de mascota se ajuste a tu estilo de vida y a la cantidad de tiempo que puedes comprometer.>
+                    elección de mascota se ajuste a tu estilo de vida y a la cantidad de tiempo que puedes comprometer.
                 </p>
                 </p>
                 <div class="card-contenedor">
@@ -140,6 +141,7 @@
         </div>
     </main>
     <footer>
+        <div class="contenedor-footer">
         <img class="img-logo" src="./imagenes/logo.jpg" alt="">
         <div class="menu">
             <ul>
@@ -170,6 +172,7 @@
                 </li>
             </ul>
         </div>
+    </div>
     </footer>
 </body>
 
