--- a/home.html
+++ b/home.html
@@ -83,6 +83,7 @@
         </div>
     </main>
     <footer>
+        <div class="contenedor-footer">
         <img class="img-logo" src="./imagenes/logo.jpg" alt="">
         <div class="menu">
             <ul>
@@ -110,6 +111,7 @@
                 </li>
             </ul>
         </div>
+    </div>
     </footer>
 </body>
 <script src="/scripts/home.js"></script>
