--- a/dona.html
+++ b/dona.html
@@ -16,7 +16,7 @@
     
     <header>
         <div class="contenedor-logo">
-            <img  src="./imagenes/logo.jpg" alt="logo">
+            <a href="home.html"><img  src="./imagenes/logo.jpg" alt="logo"></a>
         </div>
         <div class="contenedor-nav">
             <ul>
