--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="contenedor-logo">
-            <img  src="./imagenes/logo.jpg" alt="logo">
+            <a href="home.html"><img  src="./imagenes/logo.jpg" alt="logo"></a>
         </div>
         <div class="contenedor-nav">
             <ul>
