--- a/conocelos.html
+++ b/conocelos.html
@@ -6,6 +6,9 @@
     <title>CAAN</title>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/conocelos.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <!-- fuente kanit -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
